<resources>
    <string name="app_name">OTA Updater</string>
    <string name="app_stats">Anonymous Statistics</string>
    <string name="app_license">License</string>
    <string name="app_contrib">Contributors</string>
    <string name="app_downloads">Downloads</string>
    <string name="app_accounts">Accounts</string>
    <string name="app_settings">Settings</string>
    <string name="notif_text_rom">OTA ROM Update Available</string>
    <string name="notif_text_kernel">OTA Kernel Update Available</string>
    <string name="notif_text_app">OTA App Update Available</string>
    <string name="notif_source">OTA Updater</string>
    <string name="notif_downloading">OTA Update Downloading</string>
    <string name="notif_download">Download</string>
    <string name="alert_nodata_title">No Data Connection!</string>
    <string name="alert_nodata_message">You have no data connection\nPlease turn on Wi-Fi or Mobile Data in order to check for and download OTA updates.</string>
    <string name="alert_nowifi_title">No Wi-Fi Connection!</string>
    <string name="alert_nowifi_message">You are on a mobile connection\nThis app uses data heavily to download ROM updates.\nIt is recommended to turn on Wi-Fi to avoid overage charges.</string>
    <string name="alert_wifi_settings">Wi-Fi Settings</string>
    <string name="alert_ignore">Ignore</string>
    <string name="alert_exit">Exit</string>
    <string name="alert_options_title">Options</string>
    <string name="alert_rename_title">Rename file</string>
    <string name="alert_rename_message">Enter new file name</string>
    <string name="alert_close">Close</string>
    <string name="alert_hide">Hide</string>
    <string name="alert_rename">Rename</string>
    <string name="alert_install_title">Install ZIP</string>
    <string name="alert_install">Install</string>
    <string name="alert_install_message">Installing the file will reboot into recovery to flash the ZIP file. After installation, the system will automatically reboot.</string>
    <string name="alert_noinstall_message">Unfortunately, ROMs on your device must be flashed manually.\nPlease use the correct method for your device to flash the ROM\n\nThe .zip file is located at: %1$s</string>
    <string name="alert_update_title">ROM update available!</string>
    <string name="alert_download">Download</string>
    <string name="alert_downloading">Downloading&#8230;</string>
    <string name="alert_unsupported_title">Unsupported ROM/Kernel</string>
    <string name="alert_unsupported_message">The ROM or Kernel developer has not enabled support in the ROM and/or Kernel for the OTA Updater! Please ask them (kindly) to add support before using this app!\n\n(rom.ota.prop and kernel.ota.prop missing)</string>
    <string name="alert_update_kernel_to">This update will update your ROM (%1$s) to version %2$s</string>
    <string name="alert_update_rom_to">This update will update your kernel (%1$s) to version %2$s</string>
    <string name="alert_prune_title">Delete files older than</string>
    <string name="alert_retrieving">Retrieving Data&#8230;</string>
    <string name="alert_profile_title">Profile</string>
    <string name="alert_downloading_changelog">Your download is in progress, check notifications for progress\n\nChangelog:\n%1$s</string>
    <string name="menu_account">Account</string>
    <string name="menu_downloads">Downloads</string>
    <string name="menu_about">About</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_refresh">Refresh</string>
    <string name="menu_exit">Exit</string>
    <string name="menu_prune">Delete old Files</string>
    <string name="toast_rename">File renamed succesfully</string>
    <string name="toast_rename_error">There was a problem while renaming the selected file</string>
    <string name="toast_delete">File deleted succesfully</string>
    <string name="toast_delete_error">There was a problem while deleting the selected file</string>
    <string name="toast_prune">Old file(s) deleted successfully</string>
    <string name="toast_prune_error">There was a problem deleting one or more old files</string>
    <string name="toast_no_updates">There are no updates at this time</string>
    <string name="toast_fetch_error">There was an error fetching OTA information</string>
    <string name="toast_download_interrupted">The download was interrupted!</string>
    <string name="toast_download_md5_mismatch">MD5 error - downloaded file invalid!</string>
    <string name="toast_download_error">There was an error with the download!</string>
    <string name="toast_contrib_file_error">Error loading contributors file</string>
    <string name="toast_license_file_error">Error loading contributors file</string>
    <string name="toast_nosd_shared">Your SD card is unavailable - mounted as USB Storage</string>
    <string name="toast_nosd_error">You SD card is unavailable</string>
    <string name="about_title">About</string>
    <string name="about_ota_title">OTA Updater</string>
    <string name="about_ota_summary">Copyright &#169; 2012 - OTA Update Center\nFully open-source\nTap to visit our website</string>
    <string name="about_version_title">Version</string>
    <string name="about_version_unknown">Unkown Version (error in package manager)</string>
    <string name="about_license_title">Open-Source License</string>
    <string name="about_contrib_title">Contributors</string>
    <string name="about_feedback_title">Feedback</string>
    <string name="about_uptodate">Keep Up-to-Date!</string>
    <string name="about_follow_title">Follow us on Google+</string>
    <string name="main_walls">Wallpapers</string>
    <string name="main_res_walls">Wallpaper Resolution</string>
    <string name="main_device">Device</string>
    <string name="main_rom">ROM</string>
    <string name="main_kernel">Kernel</string>
    <string name="main_about">About</string>
    <string name="main_otaid">OTA Updater ID</string>
    <string name="updates_avail_title">Available Updates</string>
    <string name="updates_check">Check for available updates</string>
    <string name="updates_checking">Checking for available updates&#8230;</string>
    <string name="updates_none">No updates available. Tap to check manually.</string>
    <string name="updates_error">Error fetching update info: %1$s</string>
    <string name="updates_new">New update: %1$s (version %2$s)\nTap to download/flash!</string>
    <string name="rom_title">ROM</string>
    <string name="rom_updates">ROM Updates</string>
    <string name="rom_version">ROM Version</string>
    <string name="rom_info_title">ROM Information</string>
    <string name="rom_unsupported_title">Unsupported ROM</string>
    <string name="rom_unsupported_summary">The ROM developer has not enabled support for the OTA Updater! Please ask them (kindly) to add support before using this app!\n\n(rom.ota.prop missing)</string>
    <string name="kernel_title">Kernel</string>
    <string name="kernel_updates">Kernel Updates</string>
    <string name="kernel_version">Kernel Version</string>
    <string name="kernel_version_unknown">Unknown Kernel Version</string>
    <string name="kernel_info_title">Kernel Information</string>
    <string name="kernel_unsupported_title">Unsupported Kernel</string>
    <string name="kernel_unsupported_summary">The Kernel developer has not enabled support for the OTA Updater! Please ask them (kindly) to add support before using this app!\n\n(kernel.ota.prop missing)</string>
    <string name="account_screen_title">Account</string>
    <string name="account_profile_view_title">View your profile.</string>
    <string name="account_user_hint">Username</string>
    <string name="account_pass_hint">Password</string>
    <string name="account_favorites">My Favorites</string>
    <string name="account_profile_username">Username</string>
    <string name="account_profile_user">General info about the user will go here. Blah de blah blah....</string>
    <string name="account_profile_last_active">Last Active: </string>
    <string name="account_profile_join_date">Join Date: </string>
    <string name="stats_title">Anonymous Statistics</string>
    <string name="stats_optin_title">Enable Reporting</string>
    <string name="stats_view_title">View Stats</string>
    <string name="stats_preview_title">Preview Data</string>
    <string name="stats_preview_device_id_title">Device ID</string>
    <string name="stats_preview_device_title">Device</string>
    <string name="stats_preview_country_title">Country</string>
    <string name="stats_preview_carrier_title">Carrier</string>
    <string name="downloads_recent_title">Recent Downloads</string>
    <string name="downloads_pending_title">Pending Downloads</string>
    <string name="downloads_alt_zip">Zip</string>
    <string name="downloads_size_progress_b">%1$d / %2$d bytes</string>
    <string name="downloads_size_progress_kb">%1$d / %2$d KB</string>
    <string name="downloads_size_progress_mb">%1$d / %2$d MB</string>
    <string name="downloads_size_progress_gb">%1$d / %2$d GB</string>
    <string name="downloads_pct_progress">%1$d%</string>
    <string name="downloads_paused_wifi">Waiting for Wi-Fi&#8230;</string>
    <string name="downloads_paused_network">Waiting for Data connection&#8230;</string>
    <string name="downloads_paused_retry">Waiting to retry download&#8230;</string>
    <string name="downloads_paused_unknown">Waiting for download to proceed&#8230;</string>
    <string name="downloads_failed_http">Download failed: HTTP Error</string>
    <string name="downloads_failed_mount">Download failed: SD Card not mounted</string>
    <string name="downloads_failed_space">Download failed: Not enough space</string>
    <string name="downloads_failed_unknown">Download failed</string>
    <string name="downloads_failed_fileexists">Download failed: file already exists</string>
    <string name="downloads_failed_resume">Download failed: cannot resume download</string>
    <string name="downloads_none">No Downloads Found</string>
    <string name="license_title">License</string>
    <string name="license_apache_title">Apache License</string>
    <string name="license_apache_summary">Copyright &#169; 2012 OTA Update Center\nThis software is licenced under the Apache licence\nYou may not use this file except in compliance with the License.</string>
    <string name="license_obtain_title">Obtain a copy of the License</string>
    <string name="loading_dialog_title">Loading&#8230;</string>
    <string name="settings_title">OTA Updater Settings</string>
    <string name="settings_account_title">Add account</string>
    <string name="settings_account_summary">Log into your OTA Update Center account</string>
    <string name="settings_notif_title">Notify me of new updates</string>
    <string name="settings_notif_summary_off">Update notifications will not be shown\nYou will have to open the app manually to see if there are updates</string>
    <string name="settings_notif_summary_on">Update notifications will be shown</string>
    <string name="settings_device_title">Device Settings</string>
    <string name="settings_device_summary">Configure device-specific settings.\n(Caution: Only for advanced users!)</string>
    <string name="settings_wifidl_title">Downloads on Wi-Fi only</string>
    <string name="settings_wifidl_summary_on">Updates will only be downloaded when a Wi-Fi connection is available</string>
    <string name="settings_wifidl_summary_off">Updates will be downloaded on whatever connection is available.\n\nWARNING: Updates will download on the mobile network if Wi-Fi is unavailable. The updates may be quite large and possibly result in overage charges.</string>
    <string name="settings_resetwarn_title">Reset ignored warnings</string>
    <string name="settings_resetwarn_summary">Any warnings that have been ignored will be shown again.</string>
    <string name="settings_stats_title">Statistics</string>
</resources>