<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory
        android:title="@string/about_title">

        <Preference android:key="about_toolkit"
            android:title="@string/about_ota_title"
            android:summary="@string/about_ota_summary" />

        <Preference android:key="about_app"
            android:title="@string/about_version_title"
            android:summary="" />

        <Preference
            android:key="opensource_license"
            android:title="@string/about_license_title" />

        <Preference
            android:key="toolkit_stats"
            android:title="@string/about_stats_title"
            android:summary="@string/about_stats_summary" />

    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/about_uptodate">

        <Preference
            android:key="follow_gplus_pref"
            android:title="@string/about_follow_title" />

    </PreferenceCategory>

</PreferenceScreen>
